--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "chart.js": "^3.9.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^4.3.1",
